--- a/MIGO_work.ipynb
+++ b/MIGO_work.ipynb
@@ -943,8 +943,8 @@
     }
    ],
    "source": [
-    "# It seems like data is super unbalansed. To fir Lof Reg, I will been to work with data and sintetically to grow the small class.\n",
-    "# But aslo I can try Random Forest and it should handle unbalased data with resampling inside.\n",
+    "# It seems like data is super unbalanced. To for Logistic Reg, I will been to work with data and synthetically to grow the small class.\n",
+    "# But also I can try Random Forest and it should handle unbalanced data with resampling inside.\n",
     "df.describe()"
    ]
   },
@@ -1314,7 +1314,7 @@
     }
    ],
    "source": [
-    "df.corr(method ='kendall')"
+    "df.corr(method ='kendall') "
    ]
   },
   {
@@ -1753,14 +1753,14 @@
    "source": [
     "## It appears that for this specific problem, random forest is not the best choice of model even with high accuracy this is not the best choice,\n",
     "## f1 and recall has a very low score.\n",
-    "## I would definelely would work on the it with SMOTE and use sintetic method to achive better result with using country as cathegorical variable.\n",
+    "## I would definitely would work on the it with SMOTE and use synthetic method to achieve better result with using country as categorical variable.\n",
     "## adding some value in missing data will help to use more information as well and can be better result.\n",
     "##  There is  what I would try to do\n",
     "##1.change the performance metric\n",
     "##2.hange the algorithm\n",
     "##3.Oversample minority class\n",
     "##4.Undersample majority class\n",
-    "##5.Generate synthetic samples\n"
+    "##5.Generate synthetic samples"
    ]
   },
   {
@@ -2681,8 +2681,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Just shows, how oversampling with adding more in smal class can change the model and prediction even with 3 variables.\n",
-    "# Thanks for reading."
+    "#Just shows, how oversampling with improvement small class can change the model and prediction even with 3 variables.\n",
+    "# Thanks for reading.\n"
    ]
   }
  ],
